--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.8.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
 flake8 = "^6.0.0"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core"]
